<resources>
    <string name="app_name">Firebase Praktikum2"</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="save">Simpan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="uid">Uid</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="add_note">Tambah Note</string>
    <string name="default_web_client_id">397745006036-rf85e1783tb0tv1o3tvafamcragjfn7r.apps.googleusercontent.com</string>

</resources>